# HorizonEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
editor/: package.json
editor/src/: App.css  App.tsx
editor/src-tauri/: Cargo.toml  tauri.conf.json
engine/src/: Instance.h  Part.cpp  Part.h  main.cpp
engine/src/core/: Application.cpp  Application.h  Engine.cpp  Engine.h  EngineMode.cpp  EngineMode.h  Scene.h
engine/src/editor/: EditorActions.cpp  EditorActions.h  EditorUI.cpp  EditorUI.h  EditorUIPanels.cpp
engine/src/events/: HorizonEvent.cpp  HorizonEvent.h  HorizonFunction.cpp  HorizonFunction.h
engine/src/object/: Folder.h  Instance.cpp  Instance.h  LocalScript.cpp  LocalScript.h  ModuleScript.cpp  ModuleScript.h  Part.h  Script.h  ServerScript.cpp  ServerScript.h  SpotLight.h
engine/src/renderer/: Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  Input.cpp  Input.h  PlayCamera.cpp  PlayCamera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
engine/src/services/: BindableEvent.cpp  BindableEvent.h  HorizonStore.cpp  HorizonStore.h  LoopService.cpp  LoopService.h  MessagingService.cpp  MessagingService.h  Scene.cpp  Scene.h  ServerScripts.cpp  ServerScripts.h  SharedStorage.cpp  SharedStorage.h  SoundService.cpp  SoundService.h  TagService.cpp  TagService.h  TweenService.cpp  TweenService.h
scripting/: CMakeLists.txt
scripting/src/: LuauVM.cpp  LuauVM.h
shared/include/Horizon/: EngineInfo.h  Types.h
